--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -10,13 +10,14 @@
 }
 
 textarea {
-  height: 40px;
+  height: 60px;
   width: 100%;
   font-size: 1.4rem;
   resize: none;
   border: none;
   outline: none;
-  overflow: auto;
+  /* overflow: auto; */
+  overflow: hidden;
   display: block;
   background-color: #f4f1ec;
   border-bottom: 2px solid #000;
@@ -35,4 +36,7 @@ textarea {
   border: none;
   outline: none;
   padding: 0.5rem 1.3rem;
+}
+.negative-values {
+  color: #ff0000;
 }
