--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,8 +2,9 @@ nav {
   background-color: #4056A1;
   color: #FFFFFF;
   height: 120px;
-  width: 100%;
-  /* position: fixed; */
+  position: fixed; 
+  top: 0;  
+  width: 100%; 
   padding: 1.5em;
   display: flex;
   justify-content: space-between;
