--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,10 +19,15 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  padding-top: 7rem;
 }
 /*
 * Additional CSS can be defined below or in other CSS files, as per instructions
 */
+/* body, nav, p {
+  margin: 0;
+  padding: 0;
+} */
 img {
   width: 100%;
   height: auto;
@@ -33,3 +38,10 @@ img {
   margin: 0 auto;
   background-color: inherit;
 }
+
+
+/* @media (max-width: 979px) {
+  body {
+    padding-top: 0px;
+  }
+}  */
